# GNOIMI-1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  learn_GNOIMI.cpp  obtain_assignment.cpp
cmake/Modules/: FindMKL.cmake
include/: GNOIMI.h  common_type.h  file_utility.h  kmean.h
src/: GNOIMI.cpp  kmean.cpp
